--- a/html5up-spectral/index.html
+++ b/html5up-spectral/index.html
@@ -26,13 +26,12 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+										<li><a href="index.html">Home</a></li>
+										<li><a href="generic.html">History</a></li>
+										<li><a href="generic.html">Fleece</a></li>
+										<li><a href="generic.html">Contact</a></li>
 										</ul>
-									</div>
+										</div>
 								</li>
 							</ul>
 						</nav>
@@ -41,12 +40,11 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
+							<h2>ALPACAS RULE</h2>
+							<p>This is a template<br />that is all about Alpacas<br /> made by<a href="put
+								your wordpress url here">jeffrey</a>.<br />And with thanks to jeffrey</p>
 							<ul class="actions special">
-								<li><a href="#" class="button primary">Activate</a></li>
+								<a href="https://html5up.net/" class="button primary">WOO</a>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
