--- a/html5up-spectral/index.html
+++ b/html5up-spectral/index.html
@@ -70,7 +70,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/alpaca01.jpg" alt="An alpacas face" /></div><div class="content">
 								<h2>Alpacas are ancient</h2>
 								<p>Alpacas were domesticated by the Incas more than 6,000 years ago and raised
 									for their exquisite fleece. Due to its quality and all of its superhero
@@ -79,7 +79,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/alpaca02.jpg" alt="An alpacas face" /></div><div class="content">
 								<h2>Alpacas grow high quality <br />hypoallergenic fleece</h2>
 								<p>Alpaca fibre is much like sheep’s wool, but warmer and not itchy. It is
 									lacking in lanolin, which makes it hypoallergenic and also allows it to be
